--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -36,11 +36,13 @@ const {text,onclick}=Astro.props;
   text-align: center;
   width: 1.5rem;
   border-radius: 1rem;
+  color: #333;
 }
 
 .tag-text{
   display: inline;
   margin: 0;
   user-select: none;
+  color: #333;
 }
 </style>
