--- a/src/components/Tag.astro
+++ b/src/components/Tag.astro
@@ -8,18 +8,23 @@ const {text,onclick}=Astro.props;
 ---
 
 <button class="tag-element" onclick={onclick?onclick(text):""}>
-  <span class="tag-icon">#</span>
+  <span class="tag-icon">
+    <span class="icon-text">
+      #
+    </span>
+  </span>
   <p class="tag-text">{text}</p>
 </button>
 <style>
 .tag-element{
   height: 1.5rem;
   border: none;
-  border-radius: 1rem;
+  border-radius: 5px;
   padding: 0;
   padding-inline-end: 0.5rem;
   background-color: #eee;
-  box-shadow: 0 0 5px #0004;
+  border: 1px solid #ccc;
+  box-sizing: content-box;
   cursor: pointer;
   p{
     font-size: 1rem;
@@ -30,19 +35,30 @@ const {text,onclick}=Astro.props;
 }
 
 .tag-icon{
-  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   content: "";
-  background-color: rgb(160, 198, 255);
+  background-color: rgb(180, 204, 240);
   text-align: center;
   width: 1.5rem;
-  border-radius: 1rem;
-  color: #333;
+  height: 1.5rem;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  color: #555;
+}
+
+.icon-text{
+  display: block;
+  line-height: 1.5rem;
+  text-align: center;
+  font-size: 1.25rem;
 }
 
 .tag-text{
   display: inline;
   margin: 0;
   user-select: none;
-  color: #333;
+  color: #555;
 }
 </style>
